--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,6 +2,9 @@ add_library(mylib mylib.cc)
 add_executable(main main.cc)
 target_link_libraries(main mylib)
 
+add_executable(statsOnPairings statsOnPairings.cc)
+target_link_libraries(statsOnPairings mylib)
+
 
 add_executable(testMyClass testMyClass.cc)
 target_link_libraries(testMyClass mylib)
