--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,3 +11,8 @@ target_link_libraries(testMyClass mylib)
 target_link_libraries(testMyClass gtest gtest_main)
 add_test(testMyClass testMyClass)
 
+add_library(pair_imp pair_imp.cc)
+#add_executable(testMyClass testMyClass.cc)
+#target_link_libraries(testMyClass mylib)
+#target_link_libraries(testMyClass gtest gtest_main)
+#add_test(testMyClass testMyClass)
