Added new lib: pairing converter.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -17,3 +17,9 @@ target_link_libraries(testPairingImport pair_imp)
 target_link_libraries(testPairingImport gtest gtest_main)
 add_test(testPairingImport testPairingImport)
 
+
+add_library(myPairConv myPairConv.cc)
+add_executable(testMyPairConv testMyPairConvPairingImport.cc)
+target_link_libraries(testMyPairConv myPairConv)
+target_link_libraries(testMyPairConv gtest gtest_main)
+add_test(testMyPairConv testMyPairConv)
